changes to about us

--- a/styles/style.css
+++ b/styles/style.css
@@ -835,7 +835,7 @@ figure{
 
     p.video-description{
         color:#083D77;
-        font-weight: bold;
+        font-style: italic;
         position: relative;
         left: 40vh;
         font-size: 2em;
