--- a/styles/style.css
+++ b/styles/style.css
@@ -515,6 +515,12 @@ video{
     width: 100%;
 }
 
+.social-media-buttons{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 1rem;
+}
+
 /* asian garden restaurant specific css */
 .foo-ag {
     float: left;
@@ -698,6 +704,11 @@ video{
         display: grid;
         grid-template-columns: 1fr 0.6fr;
         grid-gap: 0.8rem;
+    }
+
+    .social-media-buttons{
+        display: grid;
+        grid-gap: 0.3rem;
     }
 
     /* about us css */
