--- a/styles/style.css
+++ b/styles/style.css
@@ -52,34 +52,40 @@ h1.front-page-header{
 
 /*decorative elements*/
 /*the first orange block*/
-.foo{
+.orange-line1{
     width: 200px;
-    padding-bottom: 2%;
+    padding-bottom: 1rem;
     background:  #d66401;
     position: relative;
-    top: 10px;
-    bottom: 10px;
+    bottom: 1.5rem;
+    left: 0.5rem;
 }
 
 /*the second orange block*/
-.foo2{
-    height: 10px;
+.horizontal-line1{
+    height: 5px;
     width: 200px;
     background:  #d66401;
     position: relative;
-    top: 10px;
-    bottom: 30px;
+    transform:rotate(90deg);
+    bottom: 1rem;
+    right: 8rem;
+   
 }
 
-.foo4{
-    display: inline;
-    width: 10px;
-    height: 100px;
+.circle{
+    display: inline-block;
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    background:  #083e77a2;
     position: relative;
-    background:  #d66401;
-    bottom: 100%;
-    right: 60%;
 }
+
+.line{
+    display: none;
+}
+
 
 .foo5{
     width: 50px;
@@ -203,8 +209,10 @@ blockquote{
     font-size: 1em;
     font-family: 'Oxygen', sans-serif;
     text-align: left;
-    color:rgb(68, 68, 68);
+    color:rgba(68, 68, 68, 0.815);
     padding-top: 1rem;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
 }
 
 
@@ -321,18 +329,6 @@ a:visited .chinatown-button{
     padding: 1rem 3rem;
 }
 
-blockquote.restaurant-blockquote{
-    line-height:2em;
-    font-size: 1em;
-    font-family: 'Oxygen', sans-serif;
-    font-style: italic;
-    text-align: center;
-    background-color: #f4d45ebd;
-    color:rgb(68, 68, 68);
-    max-width: 100%;
-    padding: 10%;
-    margin: 10%;
-  }
 
 li{
     font-size: 1.1em;
@@ -560,7 +556,6 @@ video{
     justify-content: center;
     width: 100%;
     margin: auto;
-    padding: 2rem;
     border: 2px solid #EE964B;
   }
 
@@ -569,7 +564,6 @@ video{
     justify-content: center;
     width: 100%;
     margin: auto;
-    padding: 2rem;
     border: 2px solid #EE964B;
   }
 
@@ -579,7 +573,6 @@ video{
     max-width: 100%;
     margin: auto;
     padding: 3rem;
-    line-height: 1.5rem;
   }
 
   section.doc-links a{
@@ -647,6 +640,9 @@ video{
     blockquote{
         font-size: 1.1em;
         padding: 2%;
+        margin-inline-start: 2rem;
+        margin-inline-end: 2rem;
+        }
     }
 
     .neighborhood-map{
@@ -696,9 +692,9 @@ video{
     }
 
     .inside1{
-        max-width: 350px;
+        max-width: 450px;
         margin: auto;
-        padding: 5%;
+        padding: 1.5rem;
         border: 2px solid #EE964B;
     }
 
@@ -734,8 +730,6 @@ video{
         font-size: 1.1em;
     }
     
-    }
-
   @media only screen and (min-width: 700px){
       h3{
           font-size: 1.3;
@@ -895,7 +889,7 @@ video{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        column-gap: 3rem;
+        column-gap: 8rem;
     }
 
     section.selina h1{
@@ -912,7 +906,7 @@ video{
     }
   
     section.doc-links a:hover{
-        border-bottom: 0.5px solid #EE964B
+        border-bottom: 0.5px solid #EE964B;
     }
 
 }
@@ -1061,6 +1055,10 @@ video{
         max-width: 500x;
         }
 
+    .inside1{
+        max-width: 550px;
+    }
+
     .inside-caption{
         font-size: 2.5em;
         bottom: 200px;
@@ -1106,6 +1104,24 @@ video{
         text-align: center;
         padding: 3rem;
       }
+
+
+    .circle{
+        width: 200px;
+        height: 200px;
+        left: 45rem;
+        bottom: 10rem;
+    }
+
+    .line{
+        display: inline-block;
+        width: 5px;
+        height: 300px;
+        background-color:#ee974bb6;
+        position: relative;
+        left: 35rem;
+        transform: rotate(45deg);
+    
 }
 
 
@@ -1196,7 +1212,10 @@ video{
     .walk-through{
     padding: 2rem 11rem;
     line-height: 2.2rem;
-  
+    }
+
+    .inside1{
+        max-width: 600px;
     }
 
     .profile{
@@ -1241,8 +1260,17 @@ video{
 
 /* about us css */
     main.aboutus-main{
-    padding: 2rem 8rem;
-  }
+        padding: 2rem 8rem;
+    }
+
+    .selina-image{
+        padding: 1rem;
+      }
+    
+      .elyana-image{
+        padding: 1rem;
+      }
+
 }
 
 
